@@ -50,6 +50,7 @@
         "RateCalculator >= 2.4.4",
         "RealisticFlashlight >= 0.2.4",
         "RecipeBook >= 3.4.5",
+        "Renamer >= 2.1.7",
         "resourcehighlighter-dark >= 2.0.6",
         "rotate-vehicles >= 0.0.7",
         "Shortcuts-ick >= 1.1.27",
